Name:                hablog
Version:             0.2.0
Synopsis:            A blog system
Description:         blog system with tags
License:             MIT
Author:              Gil Mizrahi
Maintainer:          soupiral@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple

Cabal-version:       >=1.10

tested-with: GHC==7.10

extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/soupi/hablog

library
  Build-depends:
    base
   ,scotty
   ,scotty-tls >= 0.4
   ,blaze-html
   ,blaze-markup
   ,text
   ,bifunctors
   ,transformers
   ,markdown
   ,directory
   ,filepath
   ,mime-types
   ,containers

  exposed-modules:
    Hablog.Run
    Hablog.Settings
    Hablog.Utils
    Hablog.Present
    Hablog.Page
    Hablog.Post
    Hablog.Html
  exposed:
    True

  buildable:
    True

  hs-source-dirs:
    src

  default-language:
    Haskell2010

  if impl(ghc >= 6.12.0)
    other-extensions:
      FlexibleInstances
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans

Executable hablog
  hs-source-dirs: exec-src
  main-is: Main.hs

  Build-depends:
     base
    ,hablog

  default-language:
    Haskell2010

  if impl(ghc >= 6.12.0)
    other-extensions:
      FlexibleInstances
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans
