Name:                hablog
Version:             0.4.1
Synopsis:            A blog system
Description:         blog system with tags
License:             MIT
license-file:        LICENSE
Author:              Gil Mizrahi
Maintainer:          soupiral@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple

Cabal-version:       >=1.10

tested-with: GHC==7.10

extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/soupi/hablog

library
  Build-depends:
    base >=4.7 && <5
   ,scotty
   ,scotty-tls >= 0.4
   ,blaze-html
   ,blaze-markup
   ,text
   ,mtl
   ,transformers
   ,bytestring
   ,bifunctors
   ,transformers
   ,markdown
   ,directory
   ,filepath
   ,mime-types
   ,containers

  exposed-modules:
    Web.Hablog
    Web.Hablog.Run
    Web.Hablog.Config
    Web.Hablog.Types

  other-modules:
    Web.Hablog.Utils
    Web.Hablog.Html
    Web.Hablog.Post
    Web.Hablog.Page
    Web.Hablog.Present

  exposed:
    True

  buildable:
    True

  hs-source-dirs:
    src

  default-language:
    Haskell2010

  if impl(ghc >= 6.12.0)
    other-extensions:
      FlexibleInstances
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

Executable hablog
  hs-source-dirs: app
  main-is: Main.hs

  Build-depends:
     base
    ,hablog

  default-language:
    Haskell2010

  if impl(ghc >= 6.12.0)
    other-extensions:
      FlexibleInstances
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
