Name:                hablog
Version:             0.8.0
Synopsis:            A blog system
Description:         blog system with tags
License:             MIT
license-file:        LICENSE
Author:              Gil Mizrahi
Maintainer:          gilmi@posteo.net
Stability:           Experimental
Category:            Web
Build-type:          Simple

Cabal-version:       >=1.10

extra-source-files:
  README.md

source-repository head
  type: git
  location: https://gitlab.com/gilmi/hablog

library
  Build-depends:
    base >=4.7 && <5
   ,scotty
   ,scotty-tls >= 0.4
   ,warp-tls == 3.2.12
   ,blaze-html
   ,blaze-markup
   ,text
   ,mtl
   ,transformers
   ,bytestring
   ,bifunctors
   ,transformers
   ,markdown
   ,directory
   ,filepath
   ,mime-types
   ,containers
   ,rss
   ,time
   ,network-uri

  exposed-modules:
    Web.Hablog
    Web.Hablog.Run
    Web.Hablog.Config
    Web.Hablog.Types

  other-modules:
    Web.Hablog.Utils
    Web.Hablog.Html
    Web.Hablog.Post
    Web.Hablog.Page
    Web.Hablog.Present

  exposed:
    True

  buildable:
    True

  hs-source-dirs:
    src

  default-language:
    Haskell2010

  if impl(ghc >= 6.12.0)
    other-extensions:
      FlexibleInstances
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

Executable hablog
  hs-source-dirs: app
  main-is: Main.hs

  Build-depends:
     base
    ,text
    ,optparse-applicative
    ,hablog

  default-language:
    Haskell2010

  if impl(ghc >= 6.12.0)
    other-extensions:
      FlexibleInstances
    -- ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -static -optl-static -optl-pthread -fPIC
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
