Name:                Hablog
Version:             0.0.1
Synopsis:            A blog system
Description:         blog system with tags
License:             BSD3
Author:              suppi
Maintainer:          soupiral@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable hablog
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base,
    scotty,
    blaze-html,
    text,
    transformers,
    markdown


  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind -XFlexibleInstances
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans
